--- a/ch1/index.html
+++ b/ch1/index.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
+    <title>CSS 2</title>
+    <link rel="stylesheet" href="style.css">
     <!-- <style>
-        body{
-            background-color: rgba(0, 26, 255, 0.963);
+        /* hash for id and . for class  */
+        #first{
+            background-color: aqua;
+        }
+        .bg-blue{
+            background-color: blue;
+            color: white;  
+            /* here color is for text color */
         }
     </style> -->
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-
+    <!-- <div id="first" style="background-color: aqua;">
+        first
+    </div> -->
+    <div id="second">
+        second
     </div>
+    <section class="red">
+        red
+    </section>
+    <section class="red bg-blue border-purple">
+        red blur border purple
+    </section>
 </body>
 </html>
