--- a/ch2/background.html
+++ b/ch2/background.html
@@ -12,11 +12,19 @@
         }
         .container{
             background-color: rgba(204, 0, 255, 0.165);
+            width: 334px;
+            height: 1344px;
+            background-image: url(kakashi.jpeg);
+            background-repeat: no-repeat;
+            /* repere-y, repeat-x, space */
+            background-size: 20px 20px;  
+            /* background-size: auto;   */
+            /* cover, auro etc etc */
+            height: 344px;
+            border: 2px solid red;
         }
         body{
-            background-image: url(kakashi.jpeg);
-            background-repeat: space;
-            /* repere-y, repeat-x, space */
+            
         }
     </style>
 </head>
