--- a/ch2/background.html
+++ b/ch2/background.html
@@ -11,20 +11,24 @@
             padding: 0;
         }
         .container{
-            background-color: rgba(204, 0, 255, 0.165);
+            /* background-color: rgba(204, 0, 255, 0.165); */
             width: 334px;
-            height: 1344px;
-            background-image: url(kakashi.jpeg);
-            background-repeat: no-repeat;
+            height: 744px;
+            /* background-image: url(kakashi.jpeg); */
+            /* background-repeat: no-repeat; */
             /* repere-y, repeat-x, space */
-            background-size: 20px 20px;  
+            /* background-size: 200px 150px;   */
             /* background-size: auto;   */
             /* cover, auro etc etc */
-            height: 344px;
             border: 2px solid red;
+            color: white;
+            /* background-position: top center; */
+            /* background-attachment: fixed; */
+            /* this here when we scroll page inage will not scroll only content will be scrolled. */
+            background: red url(kakashi.jpeg) no-repeat scroll top right;
         }
         body{
-            
+            margin: 0;
         }
     </style>
 </head>
